<resources>
    <string name="app_name">Don\'t late for lecture</string>
    <string name="register">회원가입하기</string>
    <string name="login_email_hint">이메일</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="signup_login_hint">이미 가입되어 있으신가요? 로그인하기</string>
    <string name="login_signup_hint">계정이 없으신가요? 회원가입하기</string>
    <string name="login_name_hint">이름</string>
    <string name="login_mobile_number_hint">휴대폰 번호</string>
    <string name="login">로그인하기</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">회원가입하기</string>
    <string name="register2">회원가입</string>
    <string name="login2">로그인</string>
    <string name="login_password_hint2">비밀번호 확인</string>
</resources>