<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginFragment" android:id="@+id/login_fragment">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" tools:ignore="UselessParent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/loginHeader"
                    android:text="@string/login2"
                    android:layout_marginTop="@dimen/loginViewsMargin"/>


            <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" android:autofillHints="emailAddress"/>

            <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" android:autofillHints="password"/>

            <Button
                    android:id="@+id/btn_login"
                    style="@style/loginButton"
                    android:text="@string/login"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/loginViewsMargin" tools:ignore="RtlHardcoded"/>
            <TextView
                    style="@style/parent"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/login_signup_hint"
                    android:layout_gravity="right"
                    android:clickable="true"
                    android:layout_marginTop="@dimen/loginViewsMargin" android:layout_width="wrap_content" android:id="@+id/text_register" tools:ignore="RtlCompat,RtlHardcoded" android:focusable="true"/>

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>